2004-10-25  Sven Neumann  <sven@gimp.org>

	* configure.in: gimp_user_version should be 2.2.

	* libgimpmodule/Makefile.am (AM_CPPFLAGS): cleanup.

2004-10-25  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am
	* tools/Makefile.am: bumped version to 2.2.0-pre1, set app version
	to 2.2, reset other versions to 2.0. Changed library versioning so
	we install with the same soname as gimp-2.0 again.

2004-10-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagefile.c (gimp_imagefile_get_desc_string): say
	"Click to create preview" if no preview is available.

2004-10-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpwidgets-utils.[ch]: added gimp_text_buffer_save()
	which saves a GtkTextBuffer's contents to a file.

	* app/widgets/gimperrorconsole.c: use
	gimp_editor_add_action_button() and removed all "clicked"
	callbacks, including all file saving code.

	* app/actions/error-console-actions.c
	* app/actions/error-console-commands.[ch]: added the code removed
	above to the action callbacks. Use gimp_text_buffer_save().

2004-10-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.[ch]
	* app/widgets/gimppaletteeditor.[ch]: added public APIs for
	zooming the editors. Use gimp_editor_add_action_button() to create
	all buttons. Removed all button callbacks and all duplicated
	button sensitivity logic.

	* app/widgets/gimpdataeditor.c (gimp_data_editor_set_data): update
	the editor's UI manager if it exists.

	* app/actions/gradient-editor-actions.c
	* app/actions/gradient-editor-commands.[ch]: added zoom actions
	and callback and call gimp_gradient_editor_zoom(). Fixed
	gradient_editor_actions_update() to actually set all items'
	sensitivity (it was possible to modify read-only gradients and
	even to crash GIMP).

	* app/actions/palette-editor-actions.c
	* app/actions/palette-editor-commands.[ch]: changed "new" and
	"zoom" actions to actually do their job instead of calling
	gtk_button_clicked(editor->foo_button).
