@@ -24,6 +24,11 @@
 
 G_BEGIN_DECLS
 
+
+#define GIMP_TYPE_ADD_MASK_TYPE (gimp_add_mask_type_get_type ())
+
+GType gimp_add_mask_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_ADD_WHITE_MASK,
@@ -34,6 +39,11 @@ typedef enum
   GIMP_ADD_COPY_MASK
 } GimpAddMaskType;
 
+
+#define GIMP_TYPE_BLEND_MODE (gimp_blend_mode_get_type ())
+
+GType gimp_blend_mode_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_FG_BG_RGB_MODE,
@@ -42,11 +52,21 @@ typedef enum
   GIMP_CUSTOM_MODE
 } GimpBlendMode;
 
+
+#define GIMP_TYPE_BRUSH_APPLICATION_MODE (gimp_brush_application_mode_get_type ())
+
+GType gimp_brush_application_mode_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_BRUSH_HARD,
   GIMP_BRUSH_SOFT
 } GimpBrushApplicationMode;
+
+
+#define GIMP_TYPE_BUCKET_FILL_MODE (gimp_bucket_fill_mode_get_type ())
+
+GType gimp_bucket_fill_mode_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -55,6 +75,11 @@ typedef enum
   GIMP_PATTERN_BUCKET_FILL
 } GimpBucketFillMode;
 
+
+#define GIMP_TYPE_CHANNEL_OPS (gimp_channel_ops_get_type ())
+
+GType gimp_channel_ops_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_CHANNEL_OP_ADD,
@@ -62,6 +87,11 @@ typedef enum
   GIMP_CHANNEL_OP_REPLACE,
   GIMP_CHANNEL_OP_INTERSECT
 } GimpChannelOps;
+
+
+#define GIMP_TYPE_CHANNEL_TYPE (gimp_channel_type_get_type ())
+
+GType gimp_channel_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -73,11 +103,21 @@ typedef enum
   GIMP_ALPHA_CHANNEL
 } GimpChannelType;
 
+
+#define GIMP_TYPE_CLONE_TYPE (gimp_clone_type_get_type ())
+
+GType gimp_clone_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_IMAGE_CLONE,
   GIMP_PATTERN_CLONE
 } GimpCloneType;
+
+
+#define GIMP_TYPE_CONVERT_DITHER_TYPE (gimp_convert_dither_type_get_type ())
+
+GType gimp_convert_dither_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -86,6 +126,11 @@ typedef enum
   GIMP_FSLOWBLEED_DITHER,
   GIMP_FIXED_DITHER
 } GimpConvertDitherType;
+
+
+#define GIMP_TYPE_CONVERT_PALETTE_TYPE (gimp_convert_palette_type_get_type ())
+
+GType gimp_convert_palette_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -96,6 +141,11 @@ typedef enum
   GIMP_CUSTOM_PALETTE
 } GimpConvertPaletteType;
 
+
+#define GIMP_TYPE_CONVOLUTION_TYPE (gimp_convolution_type_get_type ())
+
+GType gimp_convolution_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_NORMAL_CONVOL,
@@ -103,17 +153,32 @@ typedef enum
   GIMP_NEGATIVE_CONVOL
 } GimpConvolutionType;
 
+
+#define GIMP_TYPE_CONVOLVE_TYPE (gimp_convolve_type_get_type ())
+
+GType gimp_convolve_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_BLUR_CONVOLVE,
   GIMP_SHARPEN_CONVOLVE
 } GimpConvolveType;
 
+
+#define GIMP_TYPE_DODGE_BURN_TYPE (gimp_dodge_burn_type_get_type ())
+
+GType gimp_dodge_burn_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_DODGE,
   GIMP_BURN
 } GimpDodgeBurnType;
+
+
+#define GIMP_TYPE_FILL_TYPE (gimp_fill_type_get_type ())
+
+GType gimp_fill_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -124,12 +189,22 @@ typedef enum
   GIMP_PATTERN_FILL
 } GimpFillType;
 
+
+#define GIMP_TYPE_GRADIENT_SEGMENT_COLOR (gimp_gradient_segment_color_get_type ())
+
+GType gimp_gradient_segment_color_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_GRADIENT_SEGMENT_RGB,
   GIMP_GRADIENT_SEGMENT_HSV_CCW,
   GIMP_GRADIENT_SEGMENT_HSV_CW
 } GimpGradientSegmentColor;
+
+
+#define GIMP_TYPE_GRADIENT_SEGMENT_TYPE (gimp_gradient_segment_type_get_type ())
+
+GType gimp_gradient_segment_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -139,6 +214,11 @@ typedef enum
   GIMP_GRADIENT_SEGMENT_SPHERE_INCREASING,
   GIMP_GRADIENT_SEGMENT_SPHERE_DECREASING
 } GimpGradientSegmentType;
+
+
+#define GIMP_TYPE_GRADIENT_TYPE (gimp_gradient_type_get_type ())
+
+GType gimp_gradient_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -155,6 +235,11 @@ typedef enum
   GIMP_GRADIENT_SPIRAL_ANTICLOCKWISE
 } GimpGradientType;
 
+
+#define GIMP_TYPE_HISTOGRAM_CHANNEL (gimp_histogram_channel_get_type ())
+
+GType gimp_histogram_channel_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_HISTOGRAM_VALUE,
@@ -163,6 +248,11 @@ typedef enum
   GIMP_HISTOGRAM_BLUE,
   GIMP_HISTOGRAM_ALPHA
 } GimpHistogramChannel;
+
+
+#define GIMP_TYPE_HUE_RANGE (gimp_hue_range_get_type ())
+
+GType gimp_hue_range_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -175,12 +265,22 @@ typedef enum
   GIMP_MAGENTA_HUES
 } GimpHueRange;
 
+
+#define GIMP_TYPE_ICON_TYPE (gimp_icon_type_get_type ())
+
+GType gimp_icon_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_ICON_TYPE_STOCK_ID,
   GIMP_ICON_TYPE_INLINE_PIXBUF,
   GIMP_ICON_TYPE_IMAGE_FILE
 } GimpIconType;
+
+
+#define GIMP_TYPE_LAYER_MODE_EFFECTS (gimp_layer_mode_effects_get_type ())
+
+GType gimp_layer_mode_effects_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -209,11 +309,21 @@ typedef enum
   GIMP_COLOR_ERASE_MODE
 } GimpLayerModeEffects;
 
+
+#define GIMP_TYPE_MASK_APPLY_MODE (gimp_mask_apply_mode_get_type ())
+
+GType gimp_mask_apply_mode_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_MASK_APPLY,
   GIMP_MASK_DISCARD
 } GimpMaskApplyMode;
+
+
+#define GIMP_TYPE_MERGE_TYPE (gimp_merge_type_get_type ())
+
+GType gimp_merge_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -223,11 +333,21 @@ typedef enum
   GIMP_FLATTEN_IMAGE
 } GimpMergeType;
 
+
+#define GIMP_TYPE_OFFSET_TYPE (gimp_offset_type_get_type ())
+
+GType gimp_offset_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_OFFSET_BACKGROUND,
   GIMP_OFFSET_TRANSPARENT
 } GimpOffsetType;
+
+
+#define GIMP_TYPE_ORIENTATION_TYPE (gimp_orientation_type_get_type ())
+
+GType gimp_orientation_type_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -236,11 +356,21 @@ typedef enum
   GIMP_ORIENTATION_UNKNOWN
 } GimpOrientationType;
 
+
+#define GIMP_TYPE_PAINT_APPLICATION_MODE (gimp_paint_application_mode_get_type ())
+
+GType gimp_paint_application_mode_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_PAINT_CONSTANT,
   GIMP_PAINT_INCREMENTAL
 } GimpPaintApplicationMode;
+
+
+#define GIMP_TYPE_REPEAT_MODE (gimp_repeat_mode_get_type ())
+
+GType gimp_repeat_mode_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -249,12 +379,22 @@ typedef enum
   GIMP_REPEAT_TRIANGULAR
 } GimpRepeatMode;
 
+
+#define GIMP_TYPE_ROTATION_TYPE (gimp_rotation_type_get_type ())
+
+GType gimp_rotation_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_ROTATE_90,
   GIMP_ROTATE_180,
   GIMP_ROTATE_270
 } GimpRotationType;
+
+
+#define GIMP_TYPE_RUN_MODE (gimp_run_mode_get_type ())
+
+GType gimp_run_mode_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
@@ -263,11 +403,21 @@ typedef enum
   GIMP_RUN_WITH_LAST_VALS
 } GimpRunMode;
 
+
+#define GIMP_TYPE_SIZE_TYPE (gimp_size_type_get_type ())
+
+GType gimp_size_type_get_type (void) G_GNUC_CONST;
+
 typedef enum
 {
   GIMP_PIXELS,
   GIMP_POINTS
 } GimpSizeType;
+
+
+#define GIMP_TYPE_TRANSFER_MODE (gimp_transfer_mode_get_type ())
+
+GType gimp_transfer_mode_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
